--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -69,17 +69,17 @@
 
             <b>
                 <font color="white">
-                    <h3>Total Clientes: {{totalPersonas|default:0}}</h3><br>
+                    <h3>Total Clientes: {{totalPersonas|default:0}}</h3>
                 </font>
             </b>
             
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="col-sm-12 col-md-8 col-lg-6 col-xl-6">
                 <form action='/reservasDelDia/' method="POST">
                     {% csrf_token %}
-                    <h5>Buscar Cliente:</h5>
+                    <h6>Buscar Cliente:</h6>
                     <input type="text" id="nombre-input" name="nombre">
                     <button type="submit" id="boton-buscar"
-                        style="margin-top: 10px; margin-bottom: 10px; margin-left: 0%; width: 100px;"
+                        style="margin-top: 10px; margin-bottom: 10px; margin-left: 0%; width: 80px; height: 80px;"
                         class="btn btn-success">BUSCAR</button>
                 </form>
             </div>
