--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -127,6 +127,9 @@
                         <th>
                             Cantidad de Personas:
                         </th>
+                        <th>
+                            Origen:
+                        </th>
                         <th style="text-align: center;">
                             Observaciones:
                         </th>
@@ -182,6 +185,9 @@
 
                         <td>
                             <FONT COLOR="white">{{c.cantidadPersonas}}
+                        </td>
+                        <td>
+                            <FONT COLOR="white">{{c.origen_reserva}}
                         </td>
 
                         <td style="text-align: center;">
