--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -61,6 +61,17 @@
             Total de clientes del día: {{totalClientes|default:0}}
         </div>
 
+        <div style="text-align: left;" class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <form action='/#/' method="POST">
+                {% csrf_token %}
+                <h6>Buscar Cliente:</h6>
+                <input type="text" id="nombre-input" name="nombre">
+                <button type="submit" id="boton-buscar"
+                style="margin-top: 10px; margin-bottom: 10px; margin-left: 0%; width: 80px; height: 40px;"
+                    class="btn btn-success">BUSCAR</button>
+            </form>
+        </div>
+
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
             {% if turno %}
                 <h1><b> Filtrado Turno: {{turno}}</b></h1>
