--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -171,6 +171,18 @@
         </div>
     </div>
 
+    <script>
+        document.getElementById("nombre-input").focus();
+        document.addEventListener("keydown", function (event) {
+            if (event.key === "Enter" || event.which === 13) {
+                var botonBuscar = document.getElementById("boton-buscar");
+                if (botonBuscar) {
+                    botonBuscar.click();
+                }
+            }
+        });
+    </script>
+
 
 </body>
 {% endblock %}
