--- a/nuevaReserva/templates/encuesta.html
+++ b/nuevaReserva/templates/encuesta.html
@@ -269,7 +269,7 @@
                 Solo le tomará unos segundos y nos será de gran ayuda.</h5></b>
         <h4>Por favor, califique del 1 al 5 los siguientes aspectos:</h4>
 
-        <form method="POST" action="/guardaencuesta/" onsubmit="return validarTelefono()">
+        <form method="POST" class="form-group" action="/guardaencuesta/" onsubmit="return validarTelefono()">
             {% csrf_token %}
             <h5>
                 <font style="color: white"> ¿Cómo calificaría la calidad de la comida en nuestro restaurante?
@@ -539,7 +539,7 @@
         // document.getElementById('radio3.5').checked = true;
         // document.getElementById('radio4.5').checked = true;
     </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 
