--- a/nuevaReserva/templates/encuesta.html
+++ b/nuevaReserva/templates/encuesta.html
@@ -256,6 +256,14 @@
         justify-content: center;
         align-items: center;
     }
+    @media (max-width: 768px) {
+    h5 {
+        font-size: 1rem; /* Reducir el tamaño en pantallas pequeñas */
+    }
+    h4 {
+        font-size: 1.25rem; /* Reducir el tamaño en pantallas pequeñas */
+    }
+}
 </style>
 
 <body>
