--- a/nuevaReserva/templates/encuesta.html
+++ b/nuevaReserva/templates/encuesta.html
@@ -46,7 +46,7 @@
     .container {
         position: relative;
         width: 100%;
-        max-width: 100%;
+        max-width: 700px;
         height: auto;
         border-radius: 20px;
         padding: 20px;
@@ -218,7 +218,6 @@
         width: 100%;
         height: auto;
         box-sizing: border-box; /* Asegura que el padding se incluya en el ancho */
-        max-width: 100%;
     }
     .brand-title {
         font-size: 1.5rem;
@@ -241,7 +240,6 @@
         padding: 15px;
         width: 100%; /* Cambiado a 100% para evitar el desbordamiento innecesario */
         box-sizing: border-box; /* Asegura que el ancho incluya el padding */
-        max-width: 100%;
     }
     .brand-title {
         font-size: 1.2rem;
