--- a/nuevaReserva/templates/encuesta.html
+++ b/nuevaReserva/templates/encuesta.html
@@ -282,7 +282,7 @@
                 Solo le tomará unos segundos y nos será de gran ayuda.</h3></b>
         <h2>Por favor, califique del 1 al 5 los siguientes aspectos:</h2>
 
-        <form method="POST" class="form-group" action="/guardaencuesta/" onsubmit="return validarTelefono()">
+        <form method="POST" class="form-group" action="/#guardaencuesta/" onsubmit="return validarTelefono()">
             {% csrf_token %}
             <h4>
                 <font style="color: white"> ¿Cómo calificaría la calidad de la comida en nuestro restaurante?
