--- a/nuevaReserva/templates/graciasencuesta.html
+++ b/nuevaReserva/templates/graciasencuesta.html
@@ -119,13 +119,13 @@
     }
 
     a {
-        position: absolute;
-        font-size: 8px;
+        position: relative;
+        font-size: 26px;
         bottom: 4px;
         right: 4px;
         text-decoration: none;
         color: black;
-        background: yellow;
+        background: white;
         border-radius: 10px;
         padding: 2px;
     }
@@ -182,7 +182,7 @@
             Tu participación en nuestra encuesta es fundamental para mejorar nuestros servicios <br> y ofrecerte una experiencia aún mejor. <br>
             Agradecemos sinceramente tu contribución y esperamos seguir superando tus expectativas.<br><br></font>
             <font style="color: white;">Si disfrutaste de tu experiencia en El Charrúa, te invitamos a compartir tu opinión en TripAdvisor.</h3></font>
-            <h1>*Enlace a TripAdvisor*</h1>
+            <a href="https://www.tripadvisor.com.pe/UserReviewEdit-g294316-d1080536-El_Charrua-Lima_Lima_Region.html" class="btn-tripadvisor" target="_blank">Ir a TripAdvisor.com</a>
             <font style="color: rgb(207, 180, 141);"><h2>¡Que tengas un excelente día!</font></h2>
             <br><br>
     </div>
