--- a/nuevaReserva/templates/encuesta.html
+++ b/nuevaReserva/templates/encuesta.html
@@ -544,8 +544,8 @@
             }
         }
 
-        // let enable = false;
-        // document.getElementById('guarda').disabled = !enable;
+        let enable = false;
+        document.getElementById('guarda').disabled = !enable;
 
         // document.getElementById('radio5').checked = true;
         // document.getElementById('radio2.5').checked = true;
