--- a/nuevaReserva/templates/encuesta.html
+++ b/nuevaReserva/templates/encuesta.html
@@ -32,7 +32,7 @@
         margin: 0;
         width: 100vw;
         height: 100%;
-        background: rgb(49, 18, 11);
+        background: #242021;
         display: flex;
         align-items: center;
         justify-content: center;
